moving en {{rank}} <play#10929131>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -1,7 +1,5 @@
 ==English==
 
-{{rank|London|save|length|580|play|remained|bear|service}}
-
 ===Pronunciation===
 * {{enPR|plā}}, {{IPA|/pleɪ/}}, {{SAMPA|/pleI/}}
 * {{audio|en-us-play.ogg|Audio (US)}}
@@ -530,6 +528,9 @@
 * [[when the cat's away the mice will play]]
 * [[word play]]/[[wordplay]]
 {{rel-bottom}}
+
+===Statistics===
+{{rank|London|save|length|580|play|remained|bear|service}}
 
 [[Category:1000 English basic words]]
 [[Category:English ergative verbs]]
