--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -50,15 +50,16 @@ Chinese Version:
 后曾定元功18人，傅宽被排在第9位，封为阳陵侯，显赫
 异常。
 
+
 English Version:
 
-There is one archived story in “History Speaks – Yin Dynasty History”. Wu Ding has a dream that he will get a wisdom man for his kingdom. After waking up another day, he gathers all his officers and trying to find the wisdom man in the dream. But no one looks like the wisdom man. So he asks his servants to look for the wisdom man. Finally, they found him in a place named as Fu Xian. His name is Shuo, and he is a prisoner and working on defense building. Wu Ding meet Shuo and finds that he is exactly the wisdom man in his dream. Wu Ding is very happy and starts discussion with Shuo and amazed by his talents. Wu Ding believes he is the right person he was looking for and raise him to be the prime minister. Since he met Shuo at Fu Xian, then gives his name as “Fu Shuo”
+There is an archived story in the records of “History Speaks – Yin Dynasty History”. King Wu Ding (武丁) has a dream that he will receive a wise sage for his kingdom. After waking up the next day, he gathers all his officers and tries to find the wise man from his dream but they could not find anyone who looks like him. He orders his servants to go and search for the sage. Finally, they found him in a place called Fu Xian (傅险). His name is Yuè (说) and and was serving hard labor. The king meets Yuè and finds that he is the exact same person from his dream. He is overjoyed and upon conversing with Yuè, he is amazed by his incredible knowledge and wisdom in matters of the state. King Wu Ding had no doubt that he was the sage that he was looking for and makes him his prime minister. Since he had met Yuè at Fu Xian, the king bestows upon him and his descendants the surname "Fu" (傅) and he was “Fu Yuè” (傅说) from then on.
 
-Fu Shuo is a great prime menister and Fu becomes a great last name since then. All the historians believed that Fu is originated from Fu Shuo and originated from today’s east of Ping Lu County, Shan Xi Province, a place called “Yin Xian She” (Means a place hide the wisdom man).
+Fu Yuè was a legendary prime minister and Fu has been a prominent last name ever since. Historians agree that the surname Fu began with Fu Yuè and originated from today’s eastern part of Ping Lu County in Shanxi Province at a place called “Yin Xian She” (Means hidden sage place).
 
-Another hand, according to “Xing Zhuan”, Fu families grow at Ning Xia Province and Gan Su Province; and also in He Bei Province and Shan Dong Province. So historians believe that Fu families spread over very fast and wide in the north part of China.
+According to the ancient “Xing Zhuan” (Book of Surnames), Fu families were established mainly in the northern provinces of Ningxia, Gansu, Hebei and Shandong. Thus, historians believe that Fu families are found mainly in Northern China and spread out from there.
 
-At Han dynasty, Fu is a great last name in history. Fu Kuan is the No. 9 generals of 18 to setup the Han dynasty kingdom.
+Fu is a distinguished last name in history. During the Han Dynasty, Fu Kuan (傅宽) is one of the eighteen generals who played a key role in establishing the Han Dynasty.
 
 ----
 
