--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -110,7 +110,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Latvian: {{t|lv|  līkne|f}}
 * Lithuanian: {{t|lt|kreivė|f}}
 * Polish: {{t+|pl|krzywa|f}}
-* Romanian: {{t|ro|curbă|f}}
+* Romanian: {{t|ro|curbă|f}}, [[linie]] [[curbă]] {{f}}, [[linie]] [[curbă|curbată]] {{f}}
 * Russian: {{t|ru|кривая|f|tr=krivája}}
 * [[Scottish Gaelic]]: {{t-|gd|bogha|f|xs=Scottish Gaelic}},  {{t-|gd|lùb|f|xs=Scottish Gaelic}}
 * Slovene: [[krivulja]] {{f}}
