t+vo:[[jönik]] ([[WT:EDIT|Assisted]]) <beautiful#10932430>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -122,6 +122,7 @@
 * Ukrainian: {{t|uk|вродливий|tr=vrodlývyj|xs=Ukrainian}},  {{t|uk|красивий|tr=krasývyj|xs=Ukrainian}}
 * Urdu: {{t-|ur|خوبصورت|tr=xūbsūrat|xs=Urdu}}, {{t-|ur|سندر|tr=sundar|xs=Urdu}}
 * Vietnamese: {{t|vi|đẹp đẽ|xs=Vietnamese}},  {{t+|vi|tốt|xs=Vietnamese}},  {{t|vi|tốt đẹp|xs=Vietnamese}}
+* [[Volapük]]: {{t|vo|jönik}}
 * Welsh: {{t|cy|hardd|xs=Welsh}},  {{t|cy|prydferth|xs=Welsh}}
 * [[West Frisian]]: [[moai]], [[kreas]]
 {{trans-bottom}}
