moving en {{rank}} <beautiful#10933076>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -1,7 +1,5 @@
 ==English==
 
-{{rank|England|sense|ten|422|beautiful|possible|mark|followed}}
-
 ===Etymology===
 (1520) From {{term|beauty}} + {{etyl|gem}} {{term|-ful||full of}}. Displaced earlier {{en}} ''[[sheen]]'' "beautiful" (from {{enm}} ''[[schene#Middle English|schene]]'' "beautiful", from {{ang}} ''[[sciene#Old English|scīene]]'' "beautiful"), {{enm}} ''[[wliti#Middle English|wliti]]'' "beautiful", from {{ang}} ''[[wlitig#Old English|wlitiġ]]'' "beautiful".
 
@@ -167,6 +165,9 @@
 * Hungarian: {{t+|hu|szép}}
 * [[Macedonian]]: {{t|mk|убаво|tr=úbavo}}
 {{trans-bottom}}
+
+===Statistics===
+{{rank|England|sense|ten|422|beautiful|possible|mark|followed}}
 
 [[Category:1000 English basic words]]
 
