--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -8,7 +8,7 @@
 [[Image:Adriaen Brouwer 001.jpg|thumb|Fight ([[brawl]])]]
 
 ===Etymology 1===
-{{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan|lang=ang}}, from {{proto|Germanic|fextanan}} (cf. West Frisian {{term|fjochtsje|lang=fy}}, Dutch {{term|vechten|lang=nl}}, German {{term|fechten|lang=de}}), from {{proto|Indo-European|puk}} (cf. Irish {{term|uigim|lang=ga}} ‘I stitch’, Latin {{term|pugnus|lang=la}} ‘fist’, Tocharian B {{term|tr=pyāk|lang=tob}} ‘to strike down, batter’, Albanian për{{term|përpjek|pjek|lang=sq}} ‘I strike’, Ancient Greek {{term||pyx}} ‘with the fist’, {{term||pýktēs}} ‘boxer’ {{rfscript|Greek}}{{rfscript|Tocharian}}).
+{{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan|lang=ang}}, from {{proto|Germanic|fextanan}} (cf. West Frisian {{term|fjochtsje|lang=fy}}, Dutch {{term|vechten|lang=nl}}, German {{term|fechten|lang=de}}), from {{proto|Indo-European|puk}} (cf. Irish {{term|uigim|lang=ga}} ‘I stitch’, Latin {{term|pugnus|lang=la}} ‘fist’, Tocharian B {{term||tr=pyāk|lang=tob}} ‘to strike down, batter’, Albanian për{{term|përpjek|pjek|lang=sq}} ‘I strike’, Ancient Greek {{term||pyx}} ‘with the fist’, {{term||pýktēs}} ‘boxer’ {{rfscript|Greek}}{{rfscript|Tocharian}}).
 
 ====Verb====
 {{en-verb|fights|fighting|fought|'''[[fought]]''' ''or'' {{qualifier|archaic}} '''[[foughten]]'''}}
