--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -52,7 +52,7 @@
 * [[Interlingua]]: [[Statos Unite de America]]
 * Irish: {{t|ga|Stáit Aontaithe Mheiriceá|xs=Irish}}, {{t-|ga|Meiriceá|xs=Irish}}
 * Italian: {{t+|it|Stati Uniti d'America|m|p}}, (''short form'') {{t+|it|Stati Uniti|m|p}}, {{t-|it|SUA}}
-* Japanese: {{t+|ja|米国|tr=べいこく, Béikoku}}, {{t+|ja|アメリカ合衆国|tr=アメリカがっしゅうこく, Ameriká Gasshūkoku}}, {{t+|ja|米|tr=べい, Bei-}} (''abbreviation'')
+* Japanese: {{t+|ja|米国|tr=べいこく, Béikoku}}, {{t+|ja|アメリカ合衆国|tr=アメリカがっしゅうこく, Ameriká Gasshūkoku}}, {{t+|ja|米|tr=べい, Bei-}} (''abbreviation''), {{t|ja|アメリカ|tr=Amerika|sc=Jpan}}
 * Kazakh: [[Америка Құрама Штаттары]]
 * [[Khmer]]: {{Khmr|[[សហរដ្ឋអាមេរិក]]}} (sahā rōŭt āmērik)
 * Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
