--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -40,8 +40,9 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 *: Syriac: [[ܐܣܛܘܡܟܐ]] (’isṬōmkā’) {{m}}
 *: Hebrew: [[אסטומכא]] (’isṬōmkā’) {{m}}
 * Armenian: {{t-|hy|ստամոքս|tr=stamok's}}
-* Bengali: {{t-|bn|পাকস্থলী|sc=Beng|xs=Bengali}}
+* Bengali: {{t-|bn|পাকস্থলী|sc=Beng|xs=Bengali}}, {{t|bn|পাকস্থলী|tr=pakôsthôli|sc=Beng}}
 * [[Breton]]: [[stomog]] {{m}}
+* Bulgarian: {{t|bg|стомах|m|tr=stomáh|sc=Cyrl}}
 * [[Chamicuro]]: {{tø|ccc|knani}}
 * Chinese:
 *: Mandarin: {{t-|cmn|胃|tr=wèi|sc=Hani}},  {{t-|cmn|肚子|tr=dùzi|sc=Hani}}
@@ -55,16 +56,16 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * Greek: {{t+|el|στομάχι|n|tr=stomáchi}}, {{t+|el|στόμαχος|m|tr=stómachos}}
 ** Ancient: {{tø|grc|στόμαχος|m|tr=stómachos}}, {{tø|grc|γαστήρ|m|tr=ɣastír}}
 * Hebrew: {{t+|he|קיבה|f}}
-* Hindi: {{t-|hi|अमाशय|m|xs=Hindi}}
+* Hindi: {{t-|hi|अमाशय|m|xs=Hindi}}, {{t|hi|अमाशय|m|tr=amāśay|sc=Deva}}
 * Hungarian: {{t+|hu|gyomor}}
 * Icelandic: {{t+|is|magi|m}}
 * [[Ido]]: [[stomako]]
 * Italian: {{t+|it|stomaco|m}}
-* Japanese: [[胃]] ([[い]], i), [[お腹]] ([[おなか]], o-naka), [[腹]] ([[はら]], hara),
-{{trans-mid}}
+* Japanese: [[胃]] ([[い]], i), [[お腹]] ([[おなか]], o-naka), [[腹]] ([[はら]], hara),, {{t|ja|胃|tr=い, i|sc=Jpan}}, {{t|ja|お腹|tr=おなか, o-naka|sc=Jpan}}, {{t|ja|腹|tr=はら, hara|sc=Jpan}}
 * Kazakh: {{t+|kk|асқазан|tr=asqazan|sc=Cyrl|xs=Kazakh}}
-* Korean: [[위]] (wi)
+* Korean: [[위]] (wi), {{t|ko|위|tr=wi|sc=Kore}}
 * Latin: [[stomachus]] {{m}}
+{{trans-mid}}
 * [[Lower Sorbian]]: [[žołdk]] {{m}}
 * [[Luo]]: {{tø|luo|ich|xs=Luo}}
 * [[Macedonian]]: {{t|mk|желудник|m|tr=žéludnik}},  {{t-|mk|стомак|m|tr=stómak}}
@@ -72,17 +73,25 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * [[Mandinka]]: {{tø|mnk|konoo|xs=Mandinka}}
 * Norwegian: {{t-|no|mage|m}}
 * [[Old English]]: {{t-|ang|maga|m|xs=Old English}}
+* Persian: {{t|fa|معده|tr=me'de|sc=fa-Arab}}
 * Polish: {{t+|pl|żołądek|m}}
 * Portuguese: {{t+|pt|estômago|m}}
 * Russian: {{t+|ru|желудок|m|tr=želúdok}}, {{t+|ru|живот|m|tr=živót}}
 * [[Scottish Gaelic]]: {{t-|gd|brù|f|xs=Scottish Gaelic}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|желудац|m}}
+*: Roman: {{t|sh|želudac|m}}
+* Slovak: {{t|sk|žalúdok|m}}
+* Slovene: {{t|sl|želodec|m}}
 * Spanish: {{t+|es|estómago|m}}
 * Swahili: [[utumbo]]  ''(noun 5/6)''
 * Swedish: {{t+|sv|mage|c}}
 * [[Tagalog]]: [[tiyan]]
 * [[Taos]]: [[thį̀ę’éna]]
 * [[Telugu]]: [[పొట్ట]] (poTTa), [[కడుపు]] (kaDupu)
+* Thai: {{t|th|ท้อง|tr=tóng|sc=Thai}}
 * Turkish: {{t+|tr|mide}}
+* Ukrainian: {{t|uk|шлунок|m|tr=šlúnok|sc=Cyrl}}
 * [[Upper Sorbian]]: [[žołdk]] {{m}}
 * [[Volapük]]: {{t|vo|stomäg|xs=Volapük}}
 * Welsh: {{t+|cy|bola|xs=Welsh}}
@@ -96,6 +105,8 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 *: Syriac: [[ܟܪܣܐ]] (karsā’) {{f}}
 *: Hebrew: [[כרסא]] (karsā’) {{f}}
 * Armenian: {{t-|hy|փոր|tr=p’or}}
+* Belarusian: {{t|be|жывот|m|tr=žyvót|sc=Cyrl}}
+* Bulgarian: {{t|bg|корем|m|tr=korém|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t|cmn|腹部|tr=fùbù|sc=Hani}},  {{t-|cmn|肚子|tr=dùzi|sc=Hani}}
 * Czech: {{t-|cs|břicho|n}}
@@ -105,12 +116,12 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * German: {{t+|de|Bauch|m}}
 * Greek: {{t+|el|στομάχι|n|tr=stomáchi}}, {{t+|el|κοιλιά|f|tr=koiliá}}
 * Hebrew: {{t+|he|בטן|f}}
-* Hindi: [[पेट]] (pēṭa) {{m}}
+* Hindi: [[पेट]] (pēṭa) {{m}}, {{t|hi|पेट|m|tr=pēṭ|sc=Deva}}
 * Hungarian: {{t+|hu|has}}
 * Italian: {{t+|it|pancia|f}}
-{{trans-mid}}
 * Japanese: [[お腹]] ([[おなか]], o-naka), [[腹]] ([[はら]], hara)
 * [[Kalenjin]]: {{tø|kln|moek}}
+{{trans-mid}}
 * Korean: [[배]] (bae)
 * Kurdish:
 *: Sorani: {{t|ku|زگ|tr=zig|sc=ku-Arab}}, {{t|ku|ورگ|tr=wirg|sc=ku-Arab}}
@@ -118,13 +129,19 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * [[Macedonian]]: {{t-|mk|стомак|m|tr=stómak}},  {{t-|mk|мев|m|tr=mev}}
 * Maltese: {{t+|mt|żaqq|f|xs=Maltese}}
 * Norwegian: {{t-|no|mage|m}}, {{t+|no|buk|m}}
+* Persian: {{t|fa|شکم|tr=šekam|sc=fa-Arab}}
 * Portuguese: {{t+|pt|barriga|f}}
-* Russian: {{t+|ru|живот|m|tr=živót}}
+* Russian: {{t+|ru|живот|m|tr=živót}}, {{qualifier|disparaging}} {{t|ru|брюхо|n|tr=brjúxo|sc=Cyrl}}, {{t|ru|пузо|n|tr=púzo|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t-|gd|brù|f|xs=Scottish Gaelic}}, {{t-|gd|balg|m|xs=Scottish Gaelic}}
 * [[Sicilian]]: [[panza]] {{f}}
+* Slovak: {{t|sk|brucho|n}}
+* Slovene: {{t|sl|trebuh|m}}
 * Spanish: {{t+|es|barriga|f}}, {{t+|es|vientre|m}}
 * Swahili: {{t+|sw|tumbo|xs=Swahili}}
 * Swedish: {{t+|sv|buk}}, {{t+|sv|mage|c}}
+* Thai: {{t|th|ท้อง|tr=tóng|sc=Thai}}
+* Ukrainian: {{t|uk|живіт|m|tr=žyvít|sc=Cyrl}}
+* Vietnamese: {{t|vi|bụng}}
 {{trans-bottom}}
 
 ===Verb===
