--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -35,12 +35,12 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 
 ====Translations====
 {{trans-top|digestive organ}}
-* Arabic: {{t|ar|معدة|f|tr=má`ida, mí`da}}
+* Arabic: {{t|ar|معدة|f|tr=má3ida, mí3da}}
 * Aramaic:
 *: Syriac: [[ܐܣܛܘܡܟܐ]] (’isṬōmkā’) {{m}}
 *: Hebrew: [[אסטומכא]] (’isṬōmkā’) {{m}}
 * Armenian: {{t-|hy|ստամոքս|tr=stamok's}}
-* Bengali: {{t-|bn|পাকস্থলী|sc=Beng|xs=Bengali}}, {{t|bn|পাকস্থলী|tr=pakôsthôli|sc=Beng}}
+* Bengali: {{t-|bn|পাকস্থলী|tr=pakôsthôli|sc=Beng}}
 * [[Breton]]: [[stomog]] {{m}}
 * Bulgarian: {{t|bg|стомах|m|tr=stomáh|sc=Cyrl}}
 * [[Chamicuro]]: {{tø|ccc|knani}}
@@ -56,14 +56,14 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * Greek: {{t+|el|στομάχι|n|tr=stomáchi}}, {{t+|el|στόμαχος|m|tr=stómachos}}
 ** Ancient: {{tø|grc|στόμαχος|m|tr=stómachos}}, {{tø|grc|γαστήρ|m|tr=ɣastír}}
 * Hebrew: {{t+|he|קיבה|f}}
-* Hindi: {{t-|hi|अमाशय|m|xs=Hindi}}, {{t|hi|अमाशय|m|tr=amāśay|sc=Deva}}
+* Hindi: {{t-|hi|अमाशय|m|tr=amāśay|sc=Deva}}
 * Hungarian: {{t+|hu|gyomor}}
 * Icelandic: {{t+|is|magi|m}}
 * [[Ido]]: [[stomako]]
 * Italian: {{t+|it|stomaco|m}}
-* Japanese: [[胃]] ([[い]], i), [[お腹]] ([[おなか]], o-naka), [[腹]] ([[はら]], hara),, {{t|ja|胃|tr=い, i|sc=Jpan}}, {{t|ja|お腹|tr=おなか, o-naka|sc=Jpan}}, {{t|ja|腹|tr=はら, hara|sc=Jpan}}
+* Japanese: {{t|ja|胃|tr=い, i|sc=Jpan}}, {{t|ja|お腹|tr=おなか, o-naka|sc=Jpan}}, {{t|ja|腹|tr=はら, hara|sc=Jpan}}
 * Kazakh: {{t+|kk|асқазан|tr=asqazan|sc=Cyrl|xs=Kazakh}}
-* Korean: [[위]] (wi), {{t|ko|위|tr=wi|sc=Kore}}
+* Korean: {{t|ko|위|tr=wi|sc=Kore}} ([[胃]])
 * Latin: [[stomachus]] {{m}}
 {{trans-mid}}
 * [[Lower Sorbian]]: [[žołdk]] {{m}}
@@ -100,13 +100,13 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 {{trans-bottom}}
 
 {{trans-top|belly}}
-* Arabic: {{t|ar|معدة|f|tr=má`ida}}, {{t|ar|بطن|m|tr=baTn}}
+* Arabic: {{t|ar|معدة|f|tr=má3ida}}, {{t|ar|بطن|m|tr=baTn}}
 * Aramaic:
 *: Syriac: [[ܟܪܣܐ]] (karsā’) {{f}}
 *: Hebrew: [[כרסא]] (karsā’) {{f}}
 * Armenian: {{t-|hy|փոր|tr=p’or}}
 * Belarusian: {{t|be|жывот|m|tr=žyvót|sc=Cyrl}}
-* Bulgarian: {{t|bg|корем|m|tr=korém|sc=Cyrl}}
+* Bulgarian: {{t+|bg|корем|m|tr=korém|sc=Cyrl}},  {{t|bg|шкембе|tr=škembe}}
 * Chinese:
 *: Mandarin: {{t|cmn|腹部|tr=fùbù|sc=Hani}},  {{t-|cmn|肚子|tr=dùzi|sc=Hani}}
 * Czech: {{t-|cs|břicho|n}}
@@ -119,20 +119,24 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * Hindi: [[पेट]] (pēṭa) {{m}}, {{t|hi|पेट|m|tr=pēṭ|sc=Deva}}
 * Hungarian: {{t+|hu|has}}
 * Italian: {{t+|it|pancia|f}}
-* Japanese: [[お腹]] ([[おなか]], o-naka), [[腹]] ([[はら]], hara)
+* Japanese: {{t|ja|お腹|tr=おなか, o-naka|sc=Jpan}}, {{t|ja|腹|tr=はら, hara|sc=Jpan}}
 * [[Kalenjin]]: {{tø|kln|moek}}
-{{trans-mid}}
-* Korean: [[배]] (bae)
+* Korean: {{t|ko|배|tr=bae|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|زگ|tr=zig|sc=ku-Arab}}, {{t|ku|ورگ|tr=wirg|sc=ku-Arab}}
+{{trans-mid}}
 * [[Luhya]]: {{tø|luy|enda}}
 * [[Macedonian]]: {{t-|mk|стомак|m|tr=stómak}},  {{t-|mk|мев|m|tr=mev}}
 * Maltese: {{t+|mt|żaqq|f|xs=Maltese}}
 * Norwegian: {{t-|no|mage|m}}, {{t+|no|buk|m}}
 * Persian: {{t|fa|شکم|tr=šekam|sc=fa-Arab}}
+* Polish: {{t+|pl|brzuch|m}}
 * Portuguese: {{t+|pt|barriga|f}}
 * Russian: {{t+|ru|живот|m|tr=živót}}, {{qualifier|disparaging}} {{t|ru|брюхо|n|tr=brjúxo|sc=Cyrl}}, {{t|ru|пузо|n|tr=púzo|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t-|gd|brù|f|xs=Scottish Gaelic}}, {{t-|gd|balg|m|xs=Scottish Gaelic}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|трбух|m|sc=Cyrl|xs=Serbo-Croatian}}
+*: Roman: {{t|sh|trbuh|m|xs=Serbo-Croatian}}
 * [[Sicilian]]: [[panza]] {{f}}
 * Slovak: {{t|sk|brucho|n}}
 * Slovene: {{t|sl|trebuh|m}}
