--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -145,6 +145,7 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * Swedish: {{t+|sv|buk}}, {{t+|sv|mage|c}}
 * Thai: {{t|th|ท้อง|tr=tóng|sc=Thai}}
 * Ukrainian: {{t|uk|живіт|m|tr=žyvít|sc=Cyrl}}
+* Urdu: {{t|ur|پیٹ|m|tr=pēṭ|sc=ur-Arab}}
 * Vietnamese: {{t|vi|bụng}}
 {{trans-bottom}}
 
