--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -108,14 +108,14 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * Belarusian: {{t|be|жывот|m|tr=žyvót|sc=Cyrl}}
 * Bulgarian: {{t+|bg|корем|m|tr=korém|sc=Cyrl}},  {{t|bg|шкембе|tr=škembe}}
 * Chinese:
-*: Mandarin: {{t|cmn|腹部|tr=fùbù|sc=Hani}},  {{t-|cmn|肚子|tr=dùzi|sc=Hani}}
+*: Mandarin: {{t|zh|腹部|tr=fùbù|sc=Hani}},  {{t-|zh|肚子|tr=dùzi|sc=Hani}}
 * Czech: {{t-|cs|břicho|n}}
 * Dutch: {{t+|nl|buik}}
 * Finnish: {{t+|fi|maha}}
 * French: {{t+|fr|ventre|m}}, {{t+|fr|bedon|m}} ([[pot belly]])
 * German: {{t+|de|Bauch|m}}
 * Greek: {{t+|el|στομάχι|n|tr=stomáchi}}, {{t+|el|κοιλιά|f|tr=koiliá}}
-* Hebrew: {{t+|he|בטן|f}}
+* Hebrew: {{t+|he|בטן|f|tr=béten|alt=בֶּטֶן|sc=Hebr}}
 * Hindi: [[पेट]] (pēṭa) {{m}}, {{t|hi|पेट|m|tr=pēṭ|sc=Deva}}
 * Hungarian: {{t+|hu|has}}
 * Italian: {{t+|it|pancia|f}}
