--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -117,7 +117,7 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * German: {{t+|de|Bauch|m}}
 * Greek: {{t+|el|στομάχι|n|tr=stomáchi}}, {{t+|el|κοιλιά|f|tr=koiliá}}
 * Hebrew: {{t+|he|בטן|f|tr=béten|alt=בֶּטֶן|sc=Hebr}}
-* Hindi: [[पेट]] (pēṭa) {{m}}, {{t|hi|पेट|m|tr=pēṭ|sc=Deva}}
+* Hindi: {{t|hi|पेट|m|tr=pēṭ|sc=Deva}}
 * Hungarian: {{t+|hu|has}}
 * Italian: {{t+|it|pancia|f}}
 * Japanese: {{t|ja|お腹|tr=おなか, o-naka|sc=Jpan}}, {{t|ja|腹|tr=はら, hara|sc=Jpan}}
