--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -65,8 +65,8 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * Kazakh: {{t+|kk|асқазан|tr=asqazan|sc=Cyrl|xs=Kazakh}}
 * Korean: {{t|ko|위|tr=wi|sc=Kore}} ([[胃]])
 * Latin: [[stomachus]] {{m}}
-{{trans-mid}}
 * [[Lower Sorbian]]: [[žołdk]] {{m}}
+{{trans-mid}}
 * [[Luo]]: {{tø|luo|ich|xs=Luo}}
 * [[Macedonian]]: {{t|mk|желудник|m|tr=žéludnik}},  {{t-|mk|стомак|m|tr=stómak}}
 * Maltese: {{t-|mt|stonku|m|xs=Maltese}}
@@ -93,6 +93,7 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * Turkish: {{t+|tr|mide}}
 * Ukrainian: {{t|uk|шлунок|m|tr=šlúnok|sc=Cyrl}}
 * [[Upper Sorbian]]: [[žołdk]] {{m}}
+* Vietnamese: {{t|vi|dạ dày}}
 * [[Volapük]]: {{t|vo|stomäg|xs=Volapük}}
 * Welsh: {{t+|cy|bola|xs=Welsh}}
 * [[West Frisian]]: [[mage]]
