--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -40,6 +40,7 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 *: Syriac: [[ܐܣܛܘܡܟܐ]] (’isṬōmkā’) {{m}}
 *: Hebrew: [[אסטומכא]] (’isṬōmkā’) {{m}}
 * Armenian: {{t-|hy|ստամոքս|tr=stamok's}}
+* Belarusian: {{t|be|страўнік|m|tr=stráŭnik|sc=Cyrl}}
 * Bengali: {{t-|bn|পাকস্থলী|tr=pakôsthôli|sc=Beng}}
 * [[Breton]]: [[stomog]] {{m}}
 * Bulgarian: {{t|bg|стомах|m|tr=stomáh|sc=Cyrl}}
@@ -65,8 +66,8 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * Kazakh: {{t+|kk|асқазан|tr=asqazan|sc=Cyrl|xs=Kazakh}}
 * Korean: {{t|ko|위|tr=wi|sc=Kore}} ([[胃]])
 * Latin: [[stomachus]] {{m}}
-* [[Lower Sorbian]]: [[žołdk]] {{m}}
 {{trans-mid}}
+* [[Lower Sorbian]]: [[žołdk]] {{m}}
 * [[Luo]]: {{tø|luo|ich|xs=Luo}}
 * [[Macedonian]]: {{t|mk|желудник|m|tr=žéludnik}},  {{t-|mk|стомак|m|tr=stómak}}
 * Maltese: {{t-|mt|stonku|m|xs=Maltese}}
