t+te:[[నిరంతర వత్తిడి]] ([[WT:EDIT|Assisted]]) <push#10964023>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -109,6 +109,7 @@
 {{trans-mid}}
 * Kurdish: {{ku-Arab|[[پاڵ پێوه‌نان]]}}
 * Latvian: {{t|lv|skubināt}}
+* [[Telugu]]: {{t|te|నిరంతర వత్తిడి|tr=niramtara vattidi|sc=Telu}}
 {{trans-bottom}}
 
 {{trans-top|continually attempt to promote (a point of view)}}
