t+te:[[ఆగగని ప్రతిపాదన]] ([[WT:EDIT|Assisted]]) <push#10964061>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -115,6 +115,7 @@
 {{trans-top|continually attempt to promote (a point of view)}}
 * Kurdish: {{ku-Arab|[[پاڵ پێوه‌نان]]}}
 {{trans-mid}}
+* [[Telugu]]: {{t|te|ఆగగని ప్రతిపాదన|tr=agani pratipadana|sc=Telu}}
 {{trans-bottom}}
 
 {{trans-top|promote (a product)}}
