t+te:[[హృదయాంతర్గత రాగము]] ([[WT:EDIT|Assisted]]) <push#10964681>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -140,6 +140,7 @@
 * German: {{t+|de|drücken}}
 {{trans-mid}}
 * Spanish: {{t-|es|pujar}}
+* [[Telugu]]: {{t|te|హృదయాంతర్గత రాగము|tr=hrudayantargata ragamu|sc=Telu}}
 {{trans-bottom}}
 
 {{trans-top|(intrans.) continue to attempt to persuade a person into a particular course of action}}
