t+lv:[[miesa]] t+lv:[[ķermenis]] ([[WT:EDIT|Assisted]]) <flesh#10970737>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -37,6 +37,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 * Irish: {{t+|ga|feoil|f|xs=Irish}}
 {{trans-mid}}
 * Italian: {{t+|it|carne}}
+* Latvian: {{t|lv|miesa|f}}
 * Navajo: {{tø|nv|atsįʼ}}
 * Polish: {{t+|pl|ciało|n}}, {{t+|pl|mięso|n}}
 * Romanian: {{t+|ro|carne|f}}
@@ -60,6 +61,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 {{trans-mid}}
 * Hungarian: {{t+|hu|hús}}
 * Irish: {{t+|ga|feoil|f|xs=Irish}}
+* Latvian: {{t|lv|miesa|f}}
 * [[Pashto]]: {{t+|ps|غوښه|f|tr=γwəxa|sc=ps-Arab|xs=Pashto}}
 * Russian: {{t+|ru|мясо|n}}, {{t+|ru|плоть|f}}
 * [[Scottish Gaelic]]: [[feòil]] {{f}}
@@ -74,6 +76,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 {{trans-mid}}
 * Greek: [[σάρκα]] [ˈsarka] {{f}}
 * [[Ido]]: [[korpo]]
+* Latvian: {{t|lv|ķermenis|m}}
 * [[Scottish Gaelic]]: [[feòil]] {{f}}, [[craiceann]] {{m}}
 * Swahili: {{t+|sw|ngozi|xs=Swahili}}
 {{trans-bottom}}
