t+az:[[zəfəran]] ([[WT:EDIT|Assisted]]) <saffron#10971553>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -23,6 +23,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 {{trans-top|plant}}
 * Arabic: {{t-|ar|زعفران|alt=زَعْفَرَان}}
 * Armenian: {{t-|hy|քրքում|tr=k’rk’um}}
+* [[Azeri]]: {{t|az|zəfəran}}
 * Bosnian: {{t-|bs|šafran|m}}
 * Bulgarian: {{t-|bg|шафран|m}}
 * Chinese: [[番紅花]] / [[番红花]] (fān hóng huā)
@@ -59,6 +60,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 
 {{trans-top|spice}}
 * Armenian: {{t-|hy|քրքում|tr=k’rk’um}}
+* [[Azeri]]: {{t|az|zəfəran}}
 * Bosnian: {{t-|bs|šafran|m}}
 * Bulgarian: {{t-|bg|шафран|m}}
 * Czech: {{t-|cs|šafrán|m}}
