t+hy:[[բռնել]] ([[WT:EDIT|Assisted]]) <catch#10972574>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -290,6 +290,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 ====Translations====
 {{trans-top|to intercept an object in the air etc. {{jump|t|seize object}} }}
 * Arabic: {{t|ar|أمسك|tr='amsaka}},  {{t-|ar|مسك|tr=másaka}}
+* Armenian: {{t|hy|բռնել|tr=bṙnel|sc=Armn}}
 * [[Basque]]: {{t|eu|harrapatu}}
 * Bulgarian: {{t|bg|хващам}},  {{t|bg|улавям}}
 * [[Cebuano]]: {{tø|ceb|dakup}}
