t+gd:[[port]] t+gd:[[cala]] t+gd:[[acarsaid]] ([[WT:EDIT|Assisted]]) <port#10973160>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -60,6 +60,7 @@
 * Portuguese: {{t+|pt|porto|m}}
 * Romanian: {{t-|ro|port|n}}
 * Russian: {{t+|ru|порт|m|tr=port}}
+* [[Scottish Gaelic]]: {{t|gd|port|m}}, {{t|gd|cala|m}}, {{t|gd|acarsaid|f}}
 * Spanish: {{t-|es|puerto|m}}
 * Swahili: {{t+|sw|bandari|xs=Swahili}}
 * Swedish: {{t+|sv|hamn|c}}
@@ -83,6 +84,7 @@
 * Lithuanian: {{t|lt|uostamiestis|m}}
 * Polish: [[miasto portowe]] {{n}}
 * Romanian: {{t-|ro|port|n}}
+* [[Scottish Gaelic]]: {{t|gd|port|m}}
 * Spanish: {{t-|es|puerto|m}}
 * Swahili: {{t+|sw|bandari|xs=Swahili}}
 * Swedish: {{t+|sv|hamnstad|c}}
