--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -53,8 +53,7 @@
 {{trans-mid}}
 * Japanese: [[浮き]] (uki), [[浮揚物]] (fuyoubutsu)
 * Lithuanian: [[plaustas]] {{m}} ''raft'', [[plūdė]] {{f}} ''of an angle or a net''
-* Norwegian: {{t|no|dupp|m}}
-* Norwegian: {{t|no|dupp|m}}
+* Norwegian: {{t|no|dupp|m}} (angling float)
 * Romanian: {{t|ro|plută|f}}, {{t|ro|plutitor|n}}
 * Russian: [[плот]] (plot) {{m}} ''raft'', [[поплавок]] (poplavók) {{m}} ''of an angle or a net''
 {{trans-bottom}}
