--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -62,7 +62,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 * Japanese: {{t+|ja|雷|tr=kaminarí}}
 * Korean: [[우레]] (ure)
 * [[Kott]]: {{tø|zko|ajak}}
-* Latin: {{t-|la|tonus}}
+* Latin: {{t-|la|tonus}}, {{t|la|tonitrus|m}}, {{t|la|tonitruum|n}}
 * Lithuanian: {{t|lt|griaustinis|xs=Lithuanian}}
 * [[Macedonian]]: {{t+|mk|гром|m|tr=grom}}
 {{trans-mid}}
