--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -75,6 +75,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 * Spanish: {{t+|es|encontrar}}, {{t+|es|hallar}}
 * Swedish: {{t+|sv|finna}}, {{t+|sv|hitta}}, {{t|sv|uppdaga}}, {{t+|sv|upptäcka}}, {{t|sv|utröna}}
 * Turkish: {{t|tr|bulmak}}
+* [[Volapük]]: {{t|vo|tuvön}}
 {{trans-bottom}}
 
 {{trans-top|point out}}
