t+vo:[[bakaston]] ([[WT:EDIT|Assisted]]) <brick#10982935>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -107,6 +107,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Thai: [[อิฐ]]
 * Turkish: {{t+|tr|tuğla}}
 * Vietnamese: {{t+|vi|gạch|xs=Vietnamese}}
+* [[Volapük]]: {{t|vo|bakaston}}
 * [[Walloon]]: {{t-|wa|brike|xs=Walloon}}
 {{trans-bottom}}
 
