--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -26,6 +26,7 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 * Armenian: {{t|hy|հիմքը դնել|tr=himkʿë dnel}},  {{t|hy|հիմքը գցել|tr=himk’ë gc’el}}
 * Czech: {{t+|cs|založit}}
 * French: {{t+|fr|fonder}}
+* Italian: {{t|it|fondare}}
 * Norwegian: {{t|no|grunnlegge}}
 * Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
 {{trans-mid}}
@@ -41,6 +42,7 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 * Dutch: {{t+|nl|stichten}}
 * Finnish: {{t+|fi|perustaa}}
 * French: {{t+|fr|fonder}}
+* Italian: {{t|it|fondare}}
 * Norwegian: {{t|no|grunnlegge}}
 {{trans-mid}}
 * Polish: {{t+|pl|założyć}}, {{t+|pl|zakładać}}
