--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -293,6 +293,7 @@ From {{etyl|ang|en}} {{term|brycgian|brycġian|lang=ang}}.
 
 =====Translations=====
 {{trans-top|to span as if with a bridge}}
+* Hungarian: {{t|hu|áthidal}}
 * Swedish: {{t+|sv|överbrygga}}
 {{trans-mid}}
 {{trans-bottom}}
