--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -8,7 +8,7 @@ From {{etyl|sh|en}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land
 * [[Jugoslavia]] (''common pre-WWII spelling'')
 
 ===Pronunciation===
-[jugʊslɑvɪə]
+* {{IPA|[jugʊˈslɑvɪə]}}
 
 ===Proper noun===
 '''Yugoslavia'''
