--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -136,6 +136,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Urdu: {{t-|ur|بولنا|tr=bolnā|xs=Urdu}}
 * Uzbek: {{t|uz|gaplashmoq|xs=Uzbek}}
 * Vietnamese: {{t+|vi|nói|xs=Vietnamese}}
+* [[Volapük]]: {{t|vo|spikön}}
 * [[West Frisian]]: {{t-|fy|sprekke|xs=West Frisian}}
 * Yiddish: {{t+|yi|רעדן|tr=redn|sc=yi-Hebr|xs=Yiddish}}
 * [[Zulu]]: [[ukukhuluma]] (ugukuluma)
