/* Scottish Gaelic */ <port#11002253>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -445,7 +445,7 @@ From late {{etyl|non|no}} {{term|port|lang=non}} {{n}}, {{etyl|gmq-mno|no}} {{te
 * {{l|gd|port-adhair}}
 
 [[Category:gd:Music]]
-[[Category:gd:Transport]]
+[[Category:gd:Nautical]]
 
 ----
 
