--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -70,6 +70,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * Polish: {{t+|pl|istota|f}}
 * Portuguese: {{t+|pt|substância|f}}
 * Romanian: {{t|ro|substanță|f}}
+* [[Scottish Gaelic]]: {{t|gd|susbaint|f}}
 * Spanish: {{t+|es|sustancia|f}}
 * Swedish: {{t+|sv|substans|c}}
 {{trans-bottom}}
