/* Derived terms */ <straight#11005836>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -43,6 +43,7 @@
 ====Derived terms====
 {{rel-top|Terms derived from ''straight''}}
 * [[straighten]]
+* [[straightforward]]
 * [[straight from the shoulder]]
 {{rel-mid}}
 * [[straightly]]
