t+fa:[[بور]] ([[WT:EDIT|Assisted]]) <blonde#11010556>

--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -39,6 +39,7 @@ In the English language, it is one of only a few distinct words where the gender
 * German: {{t-|de|Blond|n}}
 {{trans-mid}}
 * Hungarian: {{t|hu|szőke}}
+* Persian: {{t|fa|بور|sc=fa-Arab}}
 * Polish: {{t+|pl|blond|m}}
 {{trans-bottom}}
 
