t+fa:[[بور]] ([[WT:EDIT|Assisted]]) <blonde#11010558>

--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -44,6 +44,7 @@ In the English language, it is one of only a few distinct words where the gender
 {{trans-bottom}}
 
 {{trans-top|a light yellowish color}}
+* Persian: {{t|fa|بور|sc=fa-Arab}}
 * Polish: {{t+|pl|blond|m}}
 {{trans-mid}}
 {{trans-bottom}}
