--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -37,6 +37,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 {{trans-top|encounter}}
 * Arabic: {{t+|ar|وجد|tr=wájada}}
 * Armenian: {{t-|hy|գտնել|tr=gtnel}}
+* [[Azeri]]: {{t|az|bulmaq}}
 * [[Basque]]: {{t|eu|aurkitu|xs=Basque}}, {{t|eu|topatu|xs=Basque}}
 * [[Breton]]: {{t+|br|kavout|xs=Breton}}
 * Chinese: [[找到]] (zhǎodào), [[發覺]], [[发觉]] (fājué), [[發現]], [[发现]] (fāxiàn)
@@ -54,9 +55,9 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 * German: {{t+|de|finden}}
 * Hebrew: {{t-|he|מצא|tr=matzá}}
 * Icelandic: {{t+|is|finna}}
+{{trans-mid}}
 * Irish: {{t+|ga|faigh|xs=Irish}}
 * Italian: {{t+|it|trovare}}
-{{trans-mid}}
 * Japanese: [[発見]]する (はっけんする, hakken-suru), [[見附る]], [[見つける]] ([[みつける]],mitsukeru)
 * Kurdish: {{ku-Arab|[[دیتنه‌وه‌]]}}, {{ku-Arab|[[دۆزینه‌وه‌]]}}
 * Latin: {{t-|la|invenire|alt=invenīre}}
