--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -35,6 +35,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Dutch: {{t+|nl|gordijn|f}}
 * Finnish: {{t-|fi|verho}}
 * French: {{t+|fr|rideau|m}}
+* {{trreq|Georgian}}
 * German: {{t+|de|Vorhang|m}},  {{t+|de|Gardine|f}}
 * Greek: {{t+|el|κουρτίνα|f}}
 * Hebrew: {{t+|he|וילון|m|tr=vilon}}
