t+lb:[[Jupe]] t+lb:[[Rack]] ([[WT:EDIT|Assisted]]) <skirt#11015167>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -84,6 +84,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijon|l
 * [[Interlingua]]: [[gonna]]
 {{trans-mid}}
 * Italian: {{t+|it|gonna}}
+* [[Luxembourgish]]: {{t|lb|Jupe|f}}, {{t|lb|Rack|m}}
 * Maltese: [[dublett]] {{m}}
 * [[Old English]]: [[læppa]] {{m}}
 * Portuguese: {{t+|pt|saia|f}}
