--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -41,6 +41,7 @@ In the English language, it is one of only a few distinct words where the gender
 {{trans-mid}}
 * Persian: {{t|fa|بور|sc=fa-Arab}}
 * Polish: {{t+|pl|blond|m}}
+* Portuguese: {{t|pt|Loira|f}}
 {{trans-bottom}}
 
 {{trans-top|a light yellowish color}}
