--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -11,12 +11,18 @@
 ===Verb===
 {{en-verb}}
 
-# To use the [[mouth]] to pull in [[liquid]] substances (often for ingestion) or to perform a similar act on solid material (often without [[ingestion]]).
-# To draw into, by any means, with an attractive force, usually without direct contact. Used to describe the effect of  negative pressure allowing atmospheric pressure to push air in, as occurs with breathing, drinking and vacuum cleaning.
-# {{intransitive|colloquial}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency.
+# {{transitive}} To use the [[mouth]] and lips to pull in (a liquid, especially [[milk]] from the breast). {{defdate|from 9th c.}}
+# {{intransitive}} To perform such an action; to feed from a [[breast]] or [[teat]]. {{defdate|from 11th c.}}
+# {{transitive}} To put the [[mouth]] or [[lips]] to (a breast, a mother etc.) to draw in milk. {{defdate|from 11th c.}}
+# {{transitive}} To [[extract]], draw in (a substance) from or out of something. {{defdate|from 14th c.}}
+#*'''1596''', Edmund Spenser, ''The Faerie Queene'', IV.i:
+#*:That she may '''sucke''' their life, and drinke their blood, / With which she from her childhood had bene fed.
+# {{transitive}} To work the [[lip]]s and [[tongue]] on (an object) to extract [[moisture]] or [[nourishment]]; to absorb (something) in the mouth. {{defdate|from 14th c.}}
+# {{transitive}} To [[pull]] (something) in a given direction, especially without direct contact. {{defdate|from 17th c.}}
+# To perform [[fellatio]]. {{defdate|from 20th c.}}
+# {{intransitive|slang}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency. {{defdate|from 20th c.}}
 #* '''1970''', [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America'', Simon and Schuster, pg. 251:
 #*: . . . and it has a few very high points . . . but as a novel, it '''sucks'''.
-# To perform [[fellatio]]; with ''off'' means to perform fellatio culminating in ejaculation.
 
 ====Synonyms====
 * To [[draw]]
@@ -41,7 +47,7 @@
 * [[suckle]]
 
 ====Translations====
-{{trans-top|to use the mouth to pull in (usually liquid) substances.}}
+{{trans-top|to use the mouth to pull in (liquid etc)}}
 * Arabic: {{t+|ar|مص}}
 * Armenian: {{t-|hy|ծծել|tr=ççel}}
 * Bengali: {{t-|bn|চোষা|tr=cosha|sc=Beng|xs=Bengali}}
