--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -10,6 +10,9 @@
 ====References====
 * {{Han ref|kx=0493.060|dkj=13844|dj=0856.070|hdz=21496.100|uh=6625|ud=26149|bh=AC4B|bd=44107}}
 
+====See also====
+* [[奉]]<!-- Same top component -->
+
 ----
 
 ==Cantonese==
