--- a/en/慌/慌.15711.wikitext
+++ b/en/慌/慌.15711.wikitext
@@ -1,4 +1,6 @@
 ==Translingual==
+===Etymology===
+{{Han compound|心|t1=heart|alt1=忄|荒|ls=psc|c1=s|c2=p}} – a ''feeling'' of panic.
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9401<sub>1</sub>|canj=心廿卜山 (PTYU)}}
