quote from 1874 literary work; added definition to match <pull#11040415>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -28,6 +28,9 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 # {{intransitive|slang}} To succeed in finding a person with whom to have sex.
 #: ''I '''pulled''' at the club last night.''
 # To toss a [[frisbee]] with the intention of launching the disc across the length of a field.
+# {{intransitive}} To [[row]]
+#*'''1874''', {{w|Marcus Clarke}}, {{w|For the Term of His Natural Life}} Chapter VI
+#*:It had been a sort of race hitherto, and the rowers, with set teeth and compressed lips, had '''pulled''' stroke for stroke. 
 
 ====Synonyms====
 * {{sense|apply force to (something) so it comes toward}} [[drag]], [[tow]], [[tug]], [[yank]]
