--- a/en/f/fought.6880.wikitext
+++ b/en/f/fought.6880.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/fɔːt/}}
-* {{a|US}} {{IPA|/fɔt/}}
-* {{a|cot-caught}} {{IPA|/fɑt/}}
+* {{a|UK}} {{IPA|/ˈfɔːt/}}
+* {{a|US}} {{IPA|/ˈfɔt/}}
+* {{a|cot-caught}} {{IPA|/ˈfɑt/}}
 * {{audio|en-us-fought.ogg|Audio (US)}}
 * {{rhymes|ɔːt}}
 
