--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -36,9 +36,10 @@
 * French: {{t+|fr|manteau|m}}
 * German: {{t+|de|Mantel|m}}
 * Greek: {{t+|el|πανωφόρι|n|tr=panofóri}}, {{t+|el|παλτό|n|tr=paltó}}
+* Icelandic: {{t|is|jakki|m}}, {{t|is|frakki|m}}
 * Indonesian: {{t+|id|mantel|xs=Indonesian}}
-* Irish: {{t-|ga|cóta|m|xs=Irish}}
 {{trans-mid}}
+* Irish: {{t-|ga|cóta|m|xs=Irish}}
 * Italian: {{t+|it|mantello|m}}
 * Japanese: {{t-|ja|コート|tr=kōto}}, {{t|ja|外套|tr=がいとう, gaitō}}
 * Korean: {{t|ko|코트|tr=k'ot'ŭ}}
