--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -5,7 +5,7 @@ from Middle French "''blonde''" (feminine). The masculine form of the word is "'
 
 In the English language, it is one of only a few distinct words where the gender differentiation is actually reflected in the spelling of the word (i.e. ''She is a blonde woman.'' vs. ''He is a blond man.''), even though this is a relatively common occurrence in other languages.
 
-"''Blond(e)''" has only recently been borrowed into English from French; the traditional English terms for lightly-colored hair are "''[[fair]]-haired''", "''[[flaxen]]''", and "''[[towhead|towheaded]]''".
+"''Blond(e)''" has only recently been borrowed into English from French; the traditional English terms for lightly-coloured hair are "''[[fair]]-haired''", "''[[flaxen]]''", and "''[[towhead|towheaded]]''".
 
 ===Alternative forms===
 * [[blond]] (UK)
