--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -34,7 +34,8 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[zhèn]] ([[zhen4]])|wg=chen<sup>4</sup>}}
+in Mainland China {{cmn-hanzi|pin=[[zhèn]] ([[zhen4]])|wg=chen<sup>4</sup>}}
+in Taiwan {{cmn-hanzi|pin=[[zùn]] ([[zùn4]])|wg=tsun<sup>4</sup>}}
 
 # {{defn|Mandarin|sort=土03}}
 
