--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -43,7 +43,7 @@
 * Finnish: {{t+|fi|oliivi}}
 * French: {{t+|fr|olive|f}}
 * [[Galician]]: [[oliva#Galician|oliva]] {{f}}
-* German: {{t+|de|Olive}}
+* German: {{t+|de|Olive|f}}
 * Greek: {{t+|el|ελιά|f|tr=eliá}}, {{qualifier|formal}} {{t|el|ελαία|f|tr=elaía}}
 * [[Hausa]]: {{t-|ha|zaitun|xs=Hausa}}
 *: Hebrew: [[זיתא]] (zaytā, zayto) {{m}}
