--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -5,8 +5,8 @@
 From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}} < {{etyl|la}} {{term|lang=la|secretus||private, secret}}, past participle of {{term|lang=la|secernere||to separate, set apart}} < {{term|lang=la|se-||apart}} + {{term|lang=la|cernere||to separate}}.
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ˈsɛk.ɹəˌtɛ.ɹi/|/ˈsɛk.ɹə.tɹi/}}, {{SAMPA|/"sEk.r\@%tE.r\i/|/"sEk.r\@.tr\i/}}
-* {{a|US}} {{IPA|/ˈsɛkɹətəɹi/}}, {{SAMPA|/"sEkr\@t@r\i/}}
+* {{a|UK}} {{IPA|/ˈsɛk.ɹəˌtə.ɹi/|/ˈsɛk.ɹə.tɹi/}}, {{SAMPA|/"sEk.r\@%tE.r\i/|/"sEk.r\@.tr\i/}}
+* {{a|US}} {{IPA|/ˈsɛkɹətɛɹi/}}, {{SAMPA|/"sEkr\@t@r\i/}}
 * {{audio|en-us-secretary.ogg|Audio (US)}}
 
 ===Noun===
