--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -165,9 +165,10 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Japanese: {{t-|ja|セイヨウスモモ|tr=seiyōsumomo}}, {{t-|ja|プラム|tr=puramu}}
 * Korean: {{t+|ko|자두|tr=jadu|sc=Hang}}, {{t-|ko|서양자두|tr=seoyangjadu|sc=Hang}}
 * Latin: {{t-|la|prunum|n|alt=prūnum}}
-{{trans-mid}}
 * Latvian: [[plūme]] {{f}}
+{{trans-mid}}
 * Lithuanian: {{t+|lt|slyva|xs=Lithuanian}}
+* [[Luxembourgish]]: {{t|lb|Quetsch|f}}
 * [[Macedonian]]: {{t-|mk|слива|f|tr=slíva}}
 * [[Manx]]: {{t|gv|plumbis|m}}
 * [[Middle High German]]: [[pflume|pflūme]], [[pfrume|pfrūme]]
