--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -168,7 +168,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Latvian: [[plūme]] {{f}}
 {{trans-mid}}
 * Lithuanian: {{t+|lt|slyva|xs=Lithuanian}}
-* [[Luxembourgish]]: {{t|lb|Quetsch|f}}
+* [[Luxembourgish]]:
 * [[Macedonian]]: {{t-|mk|слива|f|tr=slíva}}
 * [[Manx]]: {{t|gv|plumbis|m}}
 * [[Middle High German]]: [[pflume|pflūme]], [[pfrume|pfrūme]]
