--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -221,6 +221,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Latin: {{t-|la|prunus|f|alt=prūnus}}
 {{trans-mid}}
 * Latvian: [[plūme]] {{f}}
+* [[Luxembourgish]]: {{t|lb|Prommebam|m}}
 * [[Macedonian]]: {{t-|mk|слива|f|tr=slíva}}
 * [[Manx]]: {{t|gv|billey plumbis|m}}
 * [[Old English]]: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
