--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -201,7 +201,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * German: {{t+|de|Brücke|f}}
 * Greek: {{t+|el|γέφυρα|f|tr=géfyra}}
 * Hungarian: {{t+|hu|hid|alt=híd}}
-* Japanese: {{t|ja|船橋(せんきょう, senkyo)|sc=Jpan}}
+* Japanese: {{t|ja|船橋|sc=Jpan}}
 * Polish: {{t|pl|mostek kapitański|m}}
 {{trans-mid}}
 * Russian: {{t|ru|капитанский мостик|m|tr=kapitánskij móstik}}
