--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -44,8 +44,13 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[fāng]] ([[fang1]])|wg=fang<sup>1</sup>}}
+#{{defn|Mandarin|sort=土04}}
 
-# {{defn|Mandarin|sort=土04}}
+----
+
+==Vietnamese==
+===Han character===
+'''坊''' ([[phường]], [[phương]])
 
 [[fr:坊]]
 [[mg:坊]]
