--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -100,6 +100,7 @@
 * [[Old Church Slavonic]]: {{tø|cu|красьнъ|tr=krasĭnŭ|sc=Cyrs}}
 * [[Old English]]: {{t-|ang|wlitig|xs=Old English}}
 * Old Norse: [[fagr]]
+* [[Old Provençal]]: {{tø|pro|bel}}
 * Persian: {{t+|fa|زیبا|tr=zibâ|xs=Persian}}, {{t+|fa|قشنگ|tr=qašang|xs=Persian}}
 * Polish: {{t+|pl|piękny}}
 * Portuguese: {{t+|pt|belo|m}}, {{t+|pt|bela|f}}, {{t+|pt|bonito|m}}, {{t+|pt|bonita|f}}
