--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -12,7 +12,9 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 {{en-noun|-}}
 
 # the soft [[tissue]] of the [[body]], especially [[muscle]] and [[fat]].
-# [[animal]] tissue, especially animal tissue used as food.
+# {{archaic}} [[animal|Animal]] tissue regarded as food; [[meat]].
+#*'''1485''', Thomas Malory, ''Le Morte Darthur'', Book XV:
+#*:I charge the that thou ete no '''fleysshe''' as longe as ye be in the Queste of Sankgreall, nother ye shall drynke no wyne [...].
 # the [[human]] body as a physical entity.
 # the skin of a human or animal.
 # the soft, often edible, parts of [[fruit]]s or [[vegetable]]s.
@@ -50,7 +52,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 * Welsh: {{t|cy|cnawd|xs=Welsh}}
 {{trans-bottom}}
 
-{{trans-top|animal tissue}}
+{{trans-top|animal tissue as food}}
 * Armenian: {{t+|hy|միս|tr=mis}}
 * [[Catalan]]: [[carn]] {{f}}
 * Danish: {{t+|da|kød}}
