t+gv:[[ard-niau]] ([[WT:EDIT|Assisted]]) <zenith#11084268>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -54,6 +54,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 {{trans-mid}}
 * Italian: {{t-|it|zenit|m}}
 * Japanese: {{t|ja|天頂|tr=tenchō}}
+* [[Manx]]: {{t|gv|ard-niau}}
 * Polish: {{t+|pl|zenit|m}}, {{t-|pl|apogeum|n}}
 * Portuguese: {{t+|pt|zênite|m}}
 * Russian: {{t+|ru|зенит|m|tr=zenít}}
@@ -66,6 +67,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 * Dutch: {{t+|nl|zenit|n}}
 {{trans-mid}}
 * Finnish: {{t|fi|lakipiste}}
+* [[Manx]]: {{t|gv|ard-niau}}
 * Russian: {{t+|ru|зенит|m|tr=zenít}}
 {{trans-bottom}}
 
