--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -93,7 +93,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Low Saxon]]: [[Frankriek]]
 * [[Luhya]]: {{tø|luy|Frans}}
 * [[Luo]]: {{tø|luo|Frans}}
-* [[Luxembourgish]]: [[Frankräich]]
+* [[Luxembourgish]]:
 * [[Macedonian]]: {{t+|mk|Франција|f|tr=Fráncija}}
 * [[Malagasy]]: [[Frantsa]]
 * Malay: {{t-|ms|Perancis|xs=Malay}}
