--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -54,6 +54,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 ====Translations====
 {{trans-top|hardened block used for building}}
 * [[Afrikaans]]: {{t-|af|baksteen|xs=Afrikaans}}
+* [[Akkadian]]: {{tø|akk|𒋞|tr=libittu, SIG<sub>4</sub>|sc=Xsux}}
 * Arabic: {{t|ar|طوبة|f|tr=Tūba}},  {{t|ar|لبنة|f|tr=lábina}}
 * Armenian: {{t-|hy|աղյուս|tr=aġyus}}
 * [[Basque]]: [[adreilu]]
