--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -4,7 +4,7 @@
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2622<sub>7</sub>|canj=人田中月 (OWLB)}}
 
 # [[accidentally]], [[coincidentally]]
-# an [[idol]] (either a statue that is prayed to or a human celebrity with many ardent fans)
+# an [[idol]]
 
 ====References====
 * {{Han ref|kx=0112.010|dkj=00899|dj=0238.090|hdz=10190.030|uh=5076|ud=20598|bh=B0B8|bd=45240}}
@@ -53,8 +53,13 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[ǒu]] ([[ou3]]), [[zán]] ([[zan2]])|wg=ou<sup>3</sup>, tsan<sup>2</sup>}}
-
 # {{defn|Mandarin|sort=人09}}
+
+===Adverb===
+# [[accidentally]], [[coincidentally]]
+
+===Noun===
+# an [[idol]] (either a statue that is prayed to or a human celebrity with many ardent fans)
 
 ----
 
