--- a/en/傍/傍.11165.wikitext
+++ b/en/傍/傍.11165.wikitext
@@ -43,7 +43,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[bàng]] ([[bang4]]), [[páng]] ([[pang2]])|wg=pang<sup>4</sup>}}
+{{cmn-hanzi|pin=[[bàng]] ([[bang4]])|wg=pang<sup>4</sup>}}
 #{{defn|Mandarin|sort=人10}}
 
 ----
