t+es:[[captar]] t+es:[[comprender]] ([[WT:EDIT|Assisted]]) <catch#11113117>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -325,7 +325,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 {{trans-mid}}
 * Russian: {{t|ru|схватывать|tr=sxvátyvat'}} {{impf}},  {{t|ru|схватить|tr=sxvatít'}} {{pf.}},  {{t+|ru|понимать|tr=ponimát'}} {{impf}},  {{t+|ru|понять|tr=ponját'}} {{pf.}},  {{t|ru|расслышать|tr=rasslýšat'}} {{pf.}} (be able to hear and catch something said correctly)
 * Slovene: [[ujeti]]
-* Spanish: {{qualifier|Chile, informal}} {{t+|es|cachar}}
+* Spanish: {{qualifier|Chile, informal}} {{t+|es|cachar}}, {{t|es|captar}}, {{t|es|comprender}}
 * Swedish: {{t|sv|fatta}} (''colloquial''), {{t|sv|uppfatta}}
 {{trans-bottom}}
 
