--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -30,6 +30,12 @@
 ====Readings====
 * {{ja-readings|on=[[び]] (bi)|kun=[[そなえる]] (sonaeru), [[そなわる]] (sonawaru), [[そなえ]] (sonae)}}
 
+====Compounds====
+*[[備蓄]]
+*[[備品]]
+*[[準備]]
+*[[装備]]
+
 ----
 
 ==Korean==
