--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -13,16 +13,25 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijon|l
 {{en-noun}}
 
 # An article of [[clothing]], usually worn by [[woman|women]] and [[girl]]s, that hangs from the [[waist]] and covers the lower part of the body.
+#*'''c. 1907''', {{w|O. Henry}}, ''The Purple Dress''
+#*:"I like purple best," said Maida. "And old Schlegel has promised to make it for $8. It's going to be lovely. I'm going to have a plaited '''skirt''' and a blouse coat trimmed with a band of galloon under a white cloth collar with two rows of—"
 # The part of a [[dress]] or [[robe]] that hangs below the [[waist]].
+#*'''1885''', {{w|Ada S. Ballin}, ''The Science of Dress in Theory and Practice'', Chapter XI
+#*:The petticoats and '''skirts''' ordinarily worn are decidedly the heaviest part of the dress ; hence it is necessary that some reform should be effected in these.
 # {{slang}} A woman.
+#*'''1931''', {{w|Robert E. Howard}}, ''Alleys of Peril''
+#*:"Mate," said the Cockney, after we'd finished about half the bottle, "it comes to me that we're a couple o' blightin' idjits to be workin' for a '''skirt'''."
+#*:"What d'ya mean?" I asked, taking a pull at the bottle.
+#*:"Well, 'ere's us, two red-blooded 'e-men, takin' orders from a lousy little frail, 'andin' the swag h'over to 'er, and takin' wot she warnts to 'and us, w'en we could 'ave the 'ole lot. Take this job 'ere now--"
 # A part that serves as a [[border]] or [[edging]].
 
 ====Derived terms====
 {{top2}}
 * [[miniskirt]]
 * [[prairie skirt]]
-{{mid2}}
 * [[rah-rah skirt]]
+* [[skirt chaser]]
+{{mid2}}
 * [[skirted]]
 * [[skirtless]]
 * [[unskirted]]
