t+fr:[[jeu]] ([[WT:EDIT|Assisted]]) <play#11119271>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -161,6 +161,7 @@
 
 {{trans-top|area of free movement for a part of a mechanism}}
 * Finnish: {{t|fi|välys}}, {{t|fi|klappi}}, {{t+|fi|löysä}}
+* French: {{t|fr|jeu|m}}
 * Hungarian: [[holtjáték]]
 * Russian: {{t|ru|люфт|m|tr=l'uft}}, {{t|ru|зазор|m|tr=zazór}}, {{t|ru|свободный ход|m|tr=svobódnyj xod}}
 {{trans-mid}}
