--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -31,10 +31,10 @@
 * {{ja-readings|on=[[び]] (bi)|kun=[[そなえる]] (sonaeru), [[そなわる]] (sonawaru), [[そなえ]] (sonae)}}
 
 ====Compounds====
-*[[備蓄]]
-*[[備品]]
-*[[準備]]
-*[[装備]]
+*[[備蓄]] (びちく, bichiku)
+*[[備品]] (びひん, bihin)
+*[[準備]] (じゅんび, junbi)
+*[[装備]] (そうび, soubi)
 
 ----
 
