t+vo:[[blonik]] t-balance ([[WT:EDIT|Assisted]]) <blond#11124842>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -65,10 +65,11 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 * Bulgarian: {{t|bg|рус}},  {{t+|bg|светъл}}
 * Esperanto: {{t-|eo|blonda|xs=Esperanto}}
 * Finnish: {{t+|fi|vaalea}}
-{{trans-mid}}
 * [[Macedonian]]: {{t|mk|руса|f|tr=rúsa}},  {{t-|mk|плава|f|tr=pláva}}
+{{trans-mid}}
 * Russian: {{t+|ru|светлый|tr=svétlyj}}
 * Swedish: {{t-|sv|blond}}
+* [[Volapük]]: {{t|vo|blonik}}
 {{trans-bottom}}
 
 {{trans-top|person's complexion}}
