--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -81,6 +81,7 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 * [[Macedonian]]: {{t|mk|светол|m|tr=svétol}},  {{t|mk|белолик|m|tr=bélolik}},  {{t|mk|светла|f|tr=svétla}},  {{t|mk|белолика|f|tr=belólika}}
 * Russian: {{t+|ru|белый|tr=bélyj}}
 * Swedish: {{t|sv|ljus}}, {{t|sv|ljushyad}}, blond
+* [[Volapük]]: {{t|vo|blonik}}
 {{trans-bottom}}
 
 ===See also===
