--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -203,6 +203,7 @@ From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 * Latvian: {{t|lv|grāfs|xs=Latvian}}
 * Lithuanian: {{t-|lt|grafas|m|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|гроф|m|tr=grof}}
+* Norwegian: {{t|no|greve|m}}
 * [[Old English]]: {{t-|ang|eorl|m|xs=Old English}}
 * [[Old French]]: {{tø|fro|comte|m}},  {{tø|fro|conte|m}},  {{tø|fro|cunte|m}}
 * Polish: {{t+|pl|hrabia|m}}
