--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{etyl|ang}} {{term|butere|lang=ang}}, from West Germanic (compare Dutch {{term|boter|lang=nl}}, German {{term|Butter|lang=de}}), from {{etyl|la}} {{term|butyrum|būtȳrum|lang=la}}, from {{etyl|grc}} {{term|sc=polytonic|βούτυρον|βούτῡρον|tr=boútȳron|lang=grc|cow cheese}}, compound of {{term|sc=polytonic|βοῦς|tr=boûs|lang=grc}} 'ox, cow' and {{term|sc=polytonic|τῡρός|tr=tyrós|lang=grc}} 'cheese', from Scythian (compare Avestan {{rfscript|Avestan}} ''tūiri'' 'curdled milk, whey'), from {{proto|Indo-European|tuhₓrós}} (compare [[Middle Indic]] ''tūra'' 'cheese', Russian {{term|творог|tr=tvoróg||curds, soft cheese|lang=ru}}, {{etyl|ang|-}} ''þweran'' 'to churn', ''ge-þweor'' 'curds')
+From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{etyl|gmw}} {{term||buterô|butter|lang=gmw}} (compare West Frisian {{term|buter|lang=fy}}, Dutch {{term|boter|lang=nl}}, German {{term|Butter|lang=de}}), from {{etyl|la}} {{term|butyrum|būtȳrum|lang=la}}, from {{etyl|grc}} {{term|sc=polytonic|βούτυρον|βούτῡρον|tr=boútȳron|lang=grc|cow cheese}}, compound of {{term|sc=polytonic|βοῦς|tr=boûs|lang=grc}} 'ox, cow' and {{term|sc=polytonic|τῡρός|tr=tyrós|lang=grc}} 'cheese', from Scythian (compare Avestan {{rfscript|Avestan}} ''tūiri'' 'curdled milk, whey'), from {{proto|Indo-European|tuhₓrós}} (compare [[Middle Indic]] ''tūra'' 'cheese', Russian {{term|творог|tr=tvoróg||curds, soft cheese|lang=ru}}, {{etyl|ang|-}} ''þweran'' 'to churn', ''ge-þweor'' 'curds')
 
 ===Pronunciation===
 * {{enPR|bŭtʹ-ər}}, {{IPA|/ˈbʌtəɹ/}}, {{SAMPA|/"bVt@r\/}}
