--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -236,7 +236,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Russian: {{t+|ru|масло|n|tr=máslo}}, {{t+|ru|сливочное масло|n|tr=slívočnoje máslo}}
 * [[Scottish Gaelic]]: {{t-|gd|ìm|m|xs=Scottish Gaelic}}
 * Serbian: [[маслац]] ([[maslac]]) {{m}}
-* [[Sinhalese]]: {{t|si|බටර්|tr=batar|sc=Sinh|xs=Sinhalese}}
+* [[Sinhalese]]: {{t-|si|බටර්|tr=batar|sc=Sinh|xs=Sinhalese}}
 * Slovak: {{t-|sk|maslo|n}}
 * Slovene: [[maslo]] {{n}}, [[puter]] {{m}} (''colloq.'')
 * [[Sotho]]: {{t+|st|sereledi|xs=Sotho}}
