--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -258,6 +258,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 {{trans-top|a desirable thing}}
 * Danish: {{t|da|lækkerbisken|c}}
 * French: [[meilleur]] [[morceau]] {{m}}
+* German: {{t|de|Leckerbissen|m}}
 {{trans-mid}}
 * Swahili: {{t|sw|mzambarau|xs=Swahili}}
 * Vietnamese: (noun +) [[chọn lọc]], [[món]] [[bở]]
