t+vo:[[Deutän]] ([[WT:EDIT|Assisted]]) <Germany#11150604>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -105,6 +105,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Ukrainian: {{t+|uk|Німеччина|f|tr=Niméččyna|xs=Ukrainian}}
 * [[Uyghur]]: {{t-|ug|گېرمانىيە|tr=gérmaniye|sc=ug-Arab|xs=Uyghur}}
 * Vietnamese: {{t|vi|nước Đức|xs=Vietnamese}}, {{t+|vi|Đức|xs=Vietnamese}} ({{t-|vi|德|sc=Hani|xs=Vietnamese}})
+* [[Volapük]]: {{t|vo|Deutän}}
 * [[Võro]]: [[S'aksamaa]]
 * Welsh: {{t+|cy|Almaen|f|alt=Yr Almaen|xs=Welsh}}
 * [[West Frisian]]: [[Dútslân]] {{n}}
