--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -137,6 +137,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Ukrainian: {{t+|uk|Франція|f|tr=Fráncija|xs=Ukrainian}}
 * Urdu: {{t|ur|فرانس|tr=frāns|xs=Urdu}}
 * Vietnamese: {{t+|vi|Pháp|xs=Vietnamese}}, {{t|vi|nước Pháp|xs=Vietnamese}}
+* [[Volapük]]: {{t|vo|Fransän}}
 * [[Võro]]: [[Prantsusmaa]]
 * Welsh: {{t+|cy|Ffrainc|f|xs=Welsh}}
 * [[West Frisian]]: [[Frankryk]]
