/* Translingual */ use {{liushu}} template <旨#11157183>

--- a/en/旨/旨.16912.wikitext
+++ b/en/旨/旨.16912.wikitext
@@ -3,7 +3,7 @@
 ===Etymology===
 {{Han compound|匕|曰|t2=delicious, simplified from [[甘]]|ls=psc|c1=p|c2=s}} – according to the ''[[w:Showen Jiezi|Showen]]''.
 
-[[會意|Idemmogramic]] interpretations: 匕, a man tasting[http://www.chineseetymology.org/CharacterASP/CharacterEtymology.aspx?characterInput=%E6%97%A8&submitButton1=Etymology], or a spoon ([[匙]])<small>[http://www.zdic.net/zd/zi/ZdicE6Zdic97ZdicA8.htm In the tab "详细解释"]</small>.
+{{liushu|ic}} interpretations: 匕, a man tasting[http://www.chineseetymology.org/CharacterASP/CharacterEtymology.aspx?characterInput=%E6%97%A8&submitButton1=Etymology], or a spoon ([[匙]])<small>[http://www.zdic.net/zd/zi/ZdicE6Zdic97ZdicA8.htm In the tab "详细解释"]</small>.
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=02|sn=6|four=2160<sub>1</sub>|canj=心日 (PA), X心日 (XPA)|ids=⿱[[匕]][[日]]}}
