/* Etymology */ typo: Sho → Shuo <旨#11157213>

--- a/en/旨/旨.16912.wikitext
+++ b/en/旨/旨.16912.wikitext
@@ -1,7 +1,7 @@
 {{also|㫐}}
 ==Translingual==
 ===Etymology===
-{{Han compound|匕|曰|t2=delicious, simplified from [[甘]]|ls=psc|c1=p|c2=s}} – according to the ''[[w:Showen Jiezi|Showen]]''.
+{{Han compound|匕|曰|t2=delicious, simplified from [[甘]]|ls=psc|c1=p|c2=s}} – according to the ''[[w:Shuowen Jiezi|Shuowen]]''.
 
 {{liushu|ic}} interpretations: 匕, a man tasting[http://www.chineseetymology.org/CharacterASP/CharacterEtymology.aspx?characterInput=%E6%97%A8&submitButton1=Etymology], or a spoon ([[匙]])<small>[http://www.zdic.net/zd/zi/ZdicE6Zdic97ZdicA8.htm In the tab "详细解释"]</small>.
 
