--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -194,6 +194,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * [[Taos]]: [[pùlulúna]]
 * Turkish: {{t+|tr|erik}}
 * Vietnamese: ([[quả]]) [[mận]], ([[trái]]) mận
+* [[Volapük]]: {{t|vo|plöm}}
 * [[West Frisian]]: {{t-|fy|prom|xs=West Frisian}}
 * Yiddish: {{t|yi|פֿלוים|f|tr=floym|sc=yi-Hebr}}
 {{trans-bottom}}
