--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -241,6 +241,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Swahili: {{t|sw|mzambarau|xs=Swahili}}
 * Swedish: {{t+|sv|plommonträd|n}}
 * Vietnamese: [[cây]] [[mận]]
+* [[Volapük]]: {{t|vo|plömabim}}
 {{trans-bottom}}
 
 {{trans-top|the colour}}
