t+nl:[[grijpen]] ([[WT:EDIT|Assisted]]) <catch#11167300>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -332,6 +332,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 {{trans-top|to seize an opportunity {{jump|t|seize opportunity}} }}
 * Czech: {{t-|cs|chytit}}, {{t-|cs|chytnout}}
 {{trans-mid}}
+* Dutch: {{t|nl|grijpen}}
 {{trans-bottom}}
 
 {{trans-top|to reach in time to leave {{jump|t|reach in time}} }}
