--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -1,8 +1,8 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/kɔːt/}}
-* {{a|cot-caught merged}} {{IPAchar|/kɑːt/}}
+* {{a|UK}} {{IPA|/kɔːt/}}
+* {{a|US}} {{IPA|/kɒ:t/}}, {{a|cot-caught merged}} {{IPAchar|/kɑːt/}}
 *{{audio|en-us-caught.ogg|Audio (US)}}
 *{{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
 *{{audio|en-au-caught.ogg|Audio (Australia)}}
