--- a/en/f/fought.6880.wikitext
+++ b/en/f/fought.6880.wikitext
@@ -2,8 +2,7 @@
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/fɔːt/}}
-* {{a|US}} {{IPA|/fɔt/}}
-* {{a|cot-caught}} {{IPA|/fɑt/}}
+* {{a|US}} {{IPA|/fɒ:t/}}, {{a|cot-caught}} {{IPA|/fɑt/}}
 * {{audio|en-us-fought.ogg|Audio (US)}}
 * {{rhymes|ɔːt}}
 
