t+gd:[[geàrr]] ([[WT:EDIT|Assisted]]) <cut#11180763>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -370,6 +370,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * [[Catalan]]: {{t|ca|retallar}}
 {{trans-mid}}
 * Dutch: {{t|nl|knippen}}
+* [[Scottish Gaelic]]: {{t|gd|geàrr}}
 {{trans-bottom}}
 
 {{trans-top|to enter a queue in a wrong place}}
