--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -37,7 +37,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 *: Mandarin: {{t|cmn|窗簾|sc=Hani}},  {{t|cmn|窗帘|tr=chuānglián|sc=Hani}}
 * Czech: {{t-|cs|závěs|m}}
 * Danish: {{t-|da|gardin|n}}
-* Dutch: {{t+|nl|gordijn|f}}
+* Dutch: {{t+|nl|gordijn|n}}
 * Finnish: {{t-|fi|verho}}
 * French: {{t+|fr|rideau|m}}
 * Georgian: {{t|ka|ფარდა|tr=p'arda|sc=Geor}}
@@ -73,7 +73,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Bulgarian: {{t+|bg|завеса|f}}
 * Czech: {{t-|cs|opona|f}}
 * Danish: {{t+|da|tæppe|n}}
-* Dutch: {{t+|nl|gordijn|f}}
+* Dutch: {{t+|nl|doek|n}}
 * Finnish: {{t-|fi|esirippu}}
 * Georgian: {{t|ka|ფარდა|tr=p'arda|sc=Geor}}
 * German: {{t+|de|Vorhang|m}}
