--- a/en/惰/惰.15621.wikitext
+++ b/en/惰/惰.15621.wikitext
@@ -44,8 +44,13 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[duò]] ([[duo4]])|wg=to<sup>4</sup>}}
+#{{defn|Mandarin|sort=心09}}
 
-# {{defn|Mandarin|sort=心09}}
+----
+
+==Vietnamese==
+===Han character===
+'''惰''' ([[đoạ]], [[noạ]])
 
 [[fr:惰]]
 [[li:惰]]
