--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -58,8 +58,8 @@
 * Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
 * [[Kyrgyz]]: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
 * [[Lao]]: {{t-|lo|ສະຫະລັດອະເມລິກາ|tr=saha lat 'ameelikaa|sc=Laoo|xs=Lao}}
-* Latin: {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}, {{t|la|Civitates Foederatae Americae}}
 {{trans-mid}}
+* Latin: {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}, {{t|la|Civitates Foederatae Americae}}
 * Latvian: {{t-|lv|Amerikas Savienotās Valstis|xs=Latvian}}, {{t-|lv|ASV|xs=Latvian}}
 * {{trreq|Laz}}
 * Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos|xs=Lithuanian}}, {{t+|lt|JAV|xs=Lithuanian}}
@@ -101,6 +101,7 @@
 * [[Uyghur]]: {{ug-Arab|[[ئامېرىكا قوشما شتاتلىرى]]}} (’amerika quşma ştatleri)
 * Uzbek: [[Amerika Qo'shma Shtatlari]]
 * Vietnamese: {{t+|vi|Hoa Kỳ|xs=Vietnamese}}, {{t|vi|Nước Mỹ|xs=Vietnamese}}, {{t|vi|Mỹ Quốc|xs=Vietnamese}} (''short forms''); {{t|vi|Hợp Chủng Quốc Hoa Kỳ|xs=Vietnamese}} (''long form''); {{t-|vi|HK|xs=Vietnamese}} (''abbr.''), {{t+|vi|Mỹ|xs=Vietnamese}} (''abbr.'')
+* [[Volapük]]: {{t|vo|Lamerikän}}, {{t|vo|Tats-Pebalöl Nolüda-Meropa}}, {{t|vo|Tats-Pebalöl Meropa}}, {{t|vo|Tats-Pebalöl}}
 * [[Võro]]: [[Ameeriga Ütisriigiq]]
 * [[West Frisian]]: [[Feriene Steaten fan Amearika]]
 * Yiddish: ''short form'': {{t-|yi|פֿאַראייניקטע שטאַטן|p|tr=Fareynikte Shtatn|xs=Yiddish}}
