--- a/en/傕/傕.11175.wikitext
+++ b/en/傕/傕.11175.wikitext
@@ -44,8 +44,13 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[jué]] ([[jue2]])|wg=chüeh<sup>2</sup>}}
+#{{defn|Mandarin|sort=人10}}
 
-# {{defn|Mandarin|sort=人10}}
+----
+
+==Vietnamese==
+===Han character===
+'''傕''' ([[thôi]], [[thòi]])
 
 [[fr:傕]]
 [[mg:傕]]
