--- a/en/圻/圻.12990.wikitext
+++ b/en/圻/圻.12990.wikitext
@@ -45,8 +45,13 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[qí]] ([[qi2]]), [[yín]] ([[yin2]])|wg=ch'i<sup>2</sup>, yin<sup>2</sup>}}
+#{{defn|Mandarin|sort=土04}}
 
-# {{defn|Mandarin|sort=土04}}
+----
+
+==Vietnamese==
+===Han character===
+'''圻''' ([[kì]])
 
 [[fr:圻]]
 [[ko:圻]]
