--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -8,9 +8,9 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 
 ===Pronunciation===
 * {{enPR|bŭtʹ-ər}}, {{IPA|/ˈbʌtəɹ/}}, {{SAMPA|/"bVt@r\/}}
-** {{a|UK}} {{IPA|[ˈbʌt.ə]}}, {{SAMPA|["bVt.@]}}
+** {{a|UK}} {{IPA|/ˈbʌt.ə/}}, {{SAMPA|"bVt.@/}}
 **: {{audio|En-uk-butter.ogg|Audio (UK)}}
-** {{a|US}} {{IPA|[ˈbʌɾ.ɚ]}}, {{SAMPA|["bV4.@`]}}
+** {{a|US}} {{IPA|/ˈbʌɾ.ɚ/}}, {{SAMPA|/"bV4.@`/}}
 **: {{audio|en-us-butter.ogg|Audio (US)}}
 * {{rhymes|ʌtə(r)}}
 * {{hyphenation|but|ter}}
