--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -64,7 +64,7 @@
 
 ==Vietnamese==
 ===Han character===
-'''坐''' ([[ngồi]], [[toà]], [[toạ]])
+'''坐''' ([[tọa]], [[ngồi]], [[toà]], [[toạ]])
 
 [[Category:Vietnamese Hán tự]]
 
