--- a/en/倦/倦.11036.wikitext
+++ b/en/倦/倦.11036.wikitext
@@ -53,8 +53,15 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[juàn]] ([[juan4]]), [[qìng]] ([[qing4]])|wg=chüan<sup>4</sup>, ch'ing<sup>4</sup>}}
+#{{defn|Mandarin|sort=人08}}
 
-# {{defn|Mandarin|sort=人08}}
+----
+
+==Vietnamese==
+===Han character===
+'''倦''' ([[quyện]], [[cuộn]])
+
+[[Category:Vietnamese Hán tự]]
 
 [[fr:倦]]
 [[ko:倦]]
