/* Hanzi */ pò͘, hū, hù <傅#11211154>

--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -96,7 +96,7 @@ Fu is a distinguished last name in history. During the Han Dynasty, Fu Kuan (傅
 ==Min Nan==
 
 ===Hanzi===
-{{nan-hanzi}}
+{{nan-hanzi|poj=pò͘, hū, hù}}
 
 # {{defn|Min Nan}}
 
