--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -59,10 +59,8 @@
 ==Vietnamese==
 {{attention|vi|format, headers wrong}}
 
-===Hán tự===
-{{rfc-header|Hán tự|lang=vi}}
-
-旬
+===Han character===
+'''旬'''{{rfc-header|Hán tự|lang=vi}} ([[tuần]])
 
 ===Việt tự===
 
