--- a/en/垃/垃.13062.wikitext
+++ b/en/垃/垃.13062.wikitext
@@ -41,7 +41,7 @@
 
 ==Vietnamese==
 ===Han character===
-'''垃''' ([[lắp]], [[lấp]], [[lớp]], [[rập]], [[lạp]], [[lọp]])
+'''垃''' ([[lạp]], [[lắp]], [[lấp]], [[lớp]], [[rập]], [[lọp]])
 
 [[Category:Vietnamese Hán tự]]
 
