--- a/en/愧/愧.15674.wikitext
+++ b/en/愧/愧.15674.wikitext
@@ -60,6 +60,14 @@
 * [[愧色]]
 * [[愧痛]]
 
+----
+
+==Vietnamese==
+===Han character===
+'''愧''' ([[quý]])
+
+[[Category:Vietnamese Hán tự]]
+
 [[fr:愧]]
 [[ko:愧]]
 [[it:愧]]
