t+vo:[[pif]] t-balance ([[WT:EDIT|Assisted]]) <bone marrow#11263832>

--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -21,8 +21,8 @@
 * French: {{t+|fr|moelle osseuse|f}},  {{t+|fr|moelle|f}}
 * German: {{t-|de|Knochenmark|n}}
 * Hungarian: {{t+|hu|csontvelő}}
-{{trans-mid}}
 * Icelandic: {{t+|is|beinmergur|m}}
+{{trans-mid}}
 * Indonesian: [[sumsum tulang]]
 * Japanese: {{t|ja|骨髄|tr=こつずい, kotsuzui}}
 * Latin: {{t|la|medulla ossium|f}}
@@ -33,6 +33,7 @@
 * Spanish: {{t|es|meollo|m}},  {{t|es|tuétano|m}},  {{t+|es|médula|f}}
 * Swedish: {{t|sv|benmärg|c}}
 * Turkish: {{t|tr|kemik iliği}}
+* [[Volapük]]: {{t|vo|pif}}
 {{trans-bottom}}
 
 ===Anagrams===
