--- a/en/圼/圼.12991.wikitext
+++ b/en/圼/圼.12991.wikitext
@@ -2,7 +2,7 @@
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=日土 (AG)}}
-#an old term for [[㘿]]
+# {{defn|Han|sort=土04}} an old term for [[㘿]]<!--this definition is given by Zdict, but we have no entry for 㘿 yet-->
 
 ====References====
 * {{Han ref|kx=0224.200|dkj=04904|dj=0459.080|hdz=10422.160|uh=573C|ud=22332}}
