/* Translations */formatting [[Template:g|{{g}}]] using [[Project:AWB|AWB]] <skirt#11271149>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -140,7 +140,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijon|l
 
 {{checktrans-top|(probably for definition 1)}}
 * [[Afrikaans]]: [[rok]]
-* Albanian: [[fund]] {{g|Albanian}}
+* Albanian: [[fund]] {{g|sq}}
 * Arabic: {{Arab|[[التنورة]]}} {{f}}
 * [[Azeri]]: [[yubka]]
 * [[Basque]]: [[gona]]
