--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -34,7 +34,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * Finnish: {{t+|fi|aine}}, {{t+|fi|materia}}
 * French: {{t+|fr|substance|f}}
 * German: {{t+|de|Substanz|f}}, {{t+|de|Stoff|m}}
-* Greek: {{t|el|ουσία|f|tr=usía}}
+* Greek: {{t|el|ουσία|f|tr=ousía}}
 * Hebrew: {{t|he|חומר|m|tr=khómer}}
 * Hindi: {{t|hi|पदार्थ|m|tr=padārth|xs=Hindi}}
 * Hungarian: {{t+|hu|anyag}}, {{t+|hu|tartalom}}
@@ -60,7 +60,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * Finnish: {{t+|fi|ydin}}, {{t+|fi|substanssi}}
 * French: {{t+|fr|substance|f}}
 * German: {{t+|de|Substanz|f}}
-* Greek: {{t|el|ουσία|f|tr=usía}}
+* Greek: {{t|el|ουσία|f|tr=ousía}}
 * Hebrew: {{t|he|תוכן|m|tr=tókhen}}
 * Hungarian: {{t+|hu|lényeg}}
 {{trans-mid}}
@@ -96,7 +96,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 *: {{trreq|Mandarin}}
 * Finnish: {{t+|fi|aine|alt=aineet}}
 * German: {{t+|de|Substanz|f}}
-* Greek: {{t|el|ουσίες|tr=usíes}} {{f|p}}
+* Greek: {{t|el|ουσίες|tr=ousíes}} {{f|p}}
 {{trans-mid}}
 * Norwegian: {{t+|no|narkotika}}
 * Polish: {{t+|pl|narkotyk|m}}
