--- a/en/傇/傇.11159.wikitext
+++ b/en/傇/傇.11159.wikitext
@@ -2,8 +2,7 @@
 
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2424<sub>1</sub>|canj=人廿尸十 (OTSJ)}}
-
-# {{defn|Han|sort=人10}}
+#the [[masses]], the [[people]] [[at large]]
 
 ====References====
 * {{Han ref|kx=0112.210|dkj=00941|dj=0240.070|hdz=10200.070|uh=5087|ud=20615|bh=D85F|bd=55391}}
