t+pt:[[rastejar]] t-balance ([[WT:EDIT|Assisted]]) <creep#11306934>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -46,10 +46,11 @@
 * Bulgarian: {{t|bg|пълзене}}
 * Dutch: {{t-|nl|kruip|m}}
 * Finnish: {{t-|fi|ryömintä}}, {{t+|fi|matelu}}
-* French: {{t+|fr|rampement|m}}
 {{trans-mid}}
+* French: {{t+|fr|rampement|m}}
 * Italian: {{t+|it|strisciare|m}}
 * Persian: {{t|fa|خزیدن|xs=Persian}}
+* Portuguese: {{t|pt|rastejar}}
 * Russian: {{t|ru|ползание|n|tr=pólzanije}}
 {{trans-bottom}}
 
