t+hi:[[परदा]] t-balance t+ur:[[پردے]] t+ko:[[커튼]] ([[WT:EDIT|Assisted]]) <curtain#11311055>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -44,12 +44,14 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * German: {{t+|de|Vorhang|m}},  {{t+|de|Gardine|f}}
 * Greek: {{t+|el|κουρτίνα|f}}
 * Hebrew: {{t+|he|וילון|m|tr=vilon}}
+* Hindi: {{t|hi|परदा|m|tr=pardā|sc=Deva}}
 * Icelandic: {{t+|is|gluggatjald|n}}, {{t|is|gardína|f}}
 * Italian: {{t+|it|tenda|f}}, {{t-|it|tappezzeria|f}}, {{t-|it|drappo|m}}
 * Japanese: {{t+|ja|カーテン|tr=kāten}}
+* Korean: {{t|ko|커튼|tr=keoteun|sc=Kore}}
+{{trans-mid}}
 * Kurdish: {{ku-Arab|[[په‌رده‌]]}}
 * Latvian: {{t|lv|aizkars|m|xs=Latvian}}
-{{trans-mid}}
 * Lithuanian: {{t|lt|užuolaida|f|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|завеса|f|tr=závesa}},  {{t|mk|перде|n|tr=pérde}}
 * Persian: {{t+|fa|پرده|tr=pardeh|xs=Persian}}
@@ -65,6 +67,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Spanish: {{t-|es|cortina|f}}
 * Swahili: {{t+|sw|pazia|xs=Swahili}}
 * Turkish: {{t+|tr|perde}}
+* Urdu: {{t|ur|پردے|m|tr=pardā|sc=ur-Arab}}
 * Welsh: {{t|cy|llen|f|xs=Welsh}},  {{t|cy|llenni|f|p|xs=Welsh}}
 {{trans-bottom}}
 
