minor fix <France#11313386>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -153,7 +153,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 ===Statistics===
 * {{rank|mine|wild|front|576|France|London|save|length}}
 
-[[Category:France|*]]
+[[Category:France| ]]
 [[Category:Countries]]
 
 ----
@@ -184,7 +184,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * {{alphagram|acefnr}}
 * [[Céfran#French|Céfran]]
 
-[[Category:fr:France|*]]
+[[Category:fr:France| ]]
 [[Category:fr:Countries]]
 ----
 
@@ -209,7 +209,7 @@ From {{etyl|la|fro}} {{term|Francia|lang=la}}, from {{term|Franci|Francī|lang=l
 
 # {{l|en|France}} {{gloss|country}}
 
-[[Category:fro:France|*]]
+[[Category:fro:France| ]]
 [[Category:fro:Countries]]
 
 [[az:France]]
