--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -340,9 +340,17 @@ From {{etyl|en|fr}} {{term|bridge|lang=en}}.
 ==Swedish==
 
 ===Noun===
-'''bridge'''
+{{infl|sv|noun|g=c}}
 
 # [[#Etymology_2|Bridge]]; a game of cards.
+
+====Declension====
+{{sv-noun-unc-irreg-c}}
+
+====Related terms====
+* [[bridgekväll]]
+* [[bridgespelare]]
+* [[bridgetävling]]
 
 [[ang:bridge]]
 [[ar:bridge]]
