--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -260,7 +260,7 @@
 * [[Macedonian]]: {{t-|mk|игра|tr=ígra}}
 * [[Old English]]: {{t-|ang|lacan|alt=lācan|xs=Old English}}
 * [[Pashto]]: {{t-|ps|لوبې كول|tr=lobe kawəl|sc=ps-Arab|xs=Pashto}}, {{t-|ps|لوبول|tr=lobawəl|sc=ps-Arab|xs=Pashto}}
-* Persian: {{t|fa|بازی کردن|sc=fa-Arab}}
+* Persian: {{t|fa|بازی کردن|tr=bâzi kardan|sc=fa-Arab}}
 * Polish: {{t+|pl|bawić się}}
 * Portuguese: {{t+|pt|jogar}}
 * Romanian: {{t+|ro|juca}}
