--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -118,6 +118,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}} < {{e
 * Kurdish:
 *: Kurmanji: [[sekreter]]
 * Portuguese: {{t+|pt|escrivaninha|f}}
+* Russian: {{t|ru|секретер|m|tr=sekretér}}
 * Spanish: {{t+|es|escribanía|f}}
 * Swahili: {{t|sw|makarani|xs=Swahili}}
 {{trans-bottom}}
@@ -128,6 +129,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}} < {{e
 * German: {{t+|de|Sekretär}}
 {{trans-mid}}
 * Hungarian: {{t-|hu|kígyászkeselyű}}
+* Russian: {{t|ru|птица-секретарь|f|tr=ptíca-sekretár’}}
 * Spanish: {{t-|es|serpentario|m}}
 * Swahili: {{t|sw|makarani|xs=Swahili}}
 {{trans-bottom}}
