t+th:[[สะพาน]] t+ja:[[橋]] t+ko:[[다리]] t+ko:[[교]] t+ar:[[جسر]] t-balance t+ar:[[كوبري]] t+lo:[[ຂົວ]] t+km:[[ស្ពាន]] t+hi:[[पुल]] t+ur:[[پل]] ([[WT:EDIT|Assisted]]) <bridge#11397599>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -60,7 +60,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 {{trans-top|construction or natural feature that spans a divide}}
 * [[Afrikaans]]: {{t-|af|brug|xs=Afrikaans}}
 * Albanian: {{t-|sq|urë|f|xs=Albanian}}
-* Arabic: {{Arab|[[جسر]]}} (jisr) {{m}}, {{Arab|[[كوبري]]}} (kúbri) {{m}}
+* Arabic: {{Arab|[[جسر]]}} (jisr) {{m}}, {{Arab|[[كوبري]]}} (kúbri) {{m}}, {{t|ar|جسر|m|tr=jisr|sc=Arab}}, {{t|ar|كوبري|m|tr=kúbri|sc=Arab}}
 * Armenian: {{t+|hy|կամուրջ|tr=kamurǰ}}
 * [[Azeri]]: {{t+|az|körpü|xs=Azeri}}
 * [[Basque]]: {{t-|eu|zubi|xs=Basque}}
@@ -90,23 +90,23 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * [[Gujarati]]: [[પુલ]]
 * Hawaiian: {{tø|haw|uapo|xs=Hawaiian}}
 * Hebrew: {{t+|he|גשר|m|tr=gesher}}
-* Hindi: {{t-|hi|पुल|xs=Hindi}}
+* Hindi: {{t-|hi|पुल|xs=Hindi}}, {{t|hi|पुल|m|tr=pul|sc=Deva}}
 * Hungarian: {{t+|hu|híd}}
 * Icelandic: {{t+|is|brú|f}}
 * [[Ido]]: [[ponto]]
 * Indonesian: {{t|id|jembatan|xs=Indonesian}}
 * Irish: [[droichead]]
 * Italian: {{t+|it|ponte|m}}
-* Japanese: [[橋]] ([[はし]], hashi)
+* Japanese: [[橋]] ([[はし]], hashi), {{t|ja|橋|tr=はし, hashi|sc=Jpan}}
 * {{trreq|Kannada}}
-* [[Khmer]]: {{Khmr|[[ស្ពាន]]}} (spīŭn)
-* Korean: [[다리]] (dari), ...[[교]] (...gyo, used as suffix)
+* [[Khmer]]: {{Khmr|[[ស្ពាន]]}} (spīŭn), {{t|km|ស្ពាន|tr=spīŭn|sc=Khmr}}
+* Korean: [[다리]] (dari), ...[[교]] (...gyo, used as suffix), {{t|ko|다리|tr=dari|sc=Kore}}, {{qualifier|suffix}} {{t|ko|교|tr=...gyo|alt=...교|sc=Kore}}
 * Kurdish:
 *: Kurmancî: [[pir]]
 *: Soranî: {{ku-Arab|[[پرد]]}}, (pird)
-* [[Lao]]: {{Laoo|[[ຂົວ]]}} (khua)
-* Latin: {{t+|la|pons|m}}
 {{trans-mid}}
+* [[Lao]]: {{Laoo|[[ຂົວ]]}} (khua), {{t|lo|ຂົວ|tr=khua|sc=Laoo}}
+* Latin: {{t+|la|pons|m}}
 * Latvian: {{t-|lv|tilts|m|xs=Latvian}}
 * [[Lingala]]: [[gwagwa]], [[gbagba]] (''pl'' bagbagba)
 * Lithuanian: {{t+|lt|tiltas|m|xs=Lithuanian}}
@@ -144,12 +144,12 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * [[Tahitian]]: [['ē'a turu]]
 * {{trreq|Tamil}}
 * [[Telugu]]: [[వారధి]], [[వంతెన]], [[సేతువు]]
-* Thai: {{Thai|[[สะพาน]]}} (sàpaan)
+* Thai: {{Thai|[[สะพาน]]}} (sàpaan), {{t|th|สะพาน|tr=sàpaan|sc=Thai}}
 * {{trreq|Tongan}}
 * Turkish: {{t+|tr|köprü}}
 * Ukrainian: {{t-|uk|міст|m|tr=mist|xs=Ukrainian}}, {{t|uk|мости|p|tr=mostý|xs=Ukrainian}}
 * {{trreq|Upper Sorbian}}
-* {{trreq|Urdu}}
+* Urdu: {{t|ur|پل|m|tr=pul|sc=ur-Arab}}
 * [[Uyghur]]: {{t|ug|كۆۋرۈك|sc=ug-Arab}}
 * Vietnamese: {{t+|vi|cầu|xs=Vietnamese}}
 * Welsh: {{t-|cy|pont|xs=Welsh}},  {{t-|cy|pontydd|p|xs=Welsh}}
