--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -65,7 +65,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * [[Azeri]]: {{t+|az|körpü|xs=Azeri}}
 * [[Basque]]: {{t-|eu|zubi|xs=Basque}}
 * Belarusian: {{t-|be|мост|m|tr=most|xs=Belarusian}}
-* Bengali: {{tø|bn|পুল|tr=pul|sc=Beng}}, {{t|bn|পুল|tr=pul|sc=Beng}}
+* Bengali: {{t|bn|পুল|tr=pul|sc=Beng}}
 * Bosnian: [[most#Bosnian|most]] {{m}}, [[ćuprija]] {{f}} ''(arch./poetic)''
 * [[Breton]]: {{t+|br|pont|m|xs=Breton}}, pontoù {{p}}
 * Bulgarian: {{t+|bg|мост|m}}
