/* Verb */ +Wikisaurus <find#11402653>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -24,6 +24,9 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 # {{transitive}} To [[determine]] or [[judge]].
 #: ''The jury '''finds''' for the defendant''
 
+====Synonyms====
+* See also [[Wikisaurus:deem]]
+
 ====Antonyms====
 * [[lose]]
 
